// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MagicButton a mode snapshot testing (external link) 1`] = `
<DocumentFragment>
  <a
    class="button"
    data-testid="button-component"
    href="https://github.com"
    rel="noreferrer noopener"
    target="_blank"
  >
    test
  </a>
</DocumentFragment>
`;

exports[`MagicButton a mode snapshot testing (internal link) 1`] = `
<DocumentFragment>
  <a
    class="button"
    data-testid="button-component"
    href="/"
  >
    test
  </a>
</DocumentFragment>
`;

exports[`MagicButton button mode snapshot testing 1`] = `
<DocumentFragment>
  <button
    class="button"
    data-testid="button-component"
  >
    test
  </button>
</DocumentFragment>
`;

exports[`MagicButton div mode snapshot testing 1`] = `
<DocumentFragment>
  <div
    class="button"
    data-testid="button-component"
  >
    test
  </div>
</DocumentFragment>
`;
